added local images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <p style="text-align: right;">By P. Arun - 10R11A12A6&nbsp;</p>
 <p style="text-align: right; color: rgb(196, 71, 58);">Under the Guidance of K. Srinivas&nbsp;</p>
 <h1 class="absolute-element" style="position: absolute; width: 968px; height: 282px; z-index: 4; left: -3px; top: 70px;">
-<img src="https://prerender.io/img/angularjs.jpg">
+<img src="images/angularjs.jpg">
 <br>
 </h1>
 
@@ -138,7 +138,7 @@
             <h2 style="color: rgb(196, 71, 58);">MVC</h2>
 <div class="absolute-element" style="position: absolute; width: 554px; height: 595px; z-index: 4; left: 192px; top: 94px;">
     
-            &nbsp; &nbsp; &nbsp;<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/MVC-Process.svg/500px-MVC-Process.svg.png" height="500">
+            &nbsp; &nbsp; &nbsp;<img src="images/mvc.png" height="500">
             <br>
 </div>
 
@@ -181,7 +181,7 @@
 <div style="text-align: left;">
     <br>
 </div>
-<img src="https://s3.amazonaws.com/media-p.slid.es/uploads/maruthi-robotboy-sharma/images/240668/spa.png" height="350">
+<img src="images/spa.png" height="350">
 </div>
 
 
@@ -488,7 +488,7 @@ Filters and Controllers
 				center: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+				transition: Reveal.getQueryHash().transition || 'zoom', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Parallax scrolling
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
