used both names

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <p>
 <br>
 </p>
-<p style="text-align: right;">By P. Arun - 10R11A12A6&nbsp;</p>
-<p style="text-align: right; color: rgb(196, 71, 58);">Under the Guidance of K. Srinivas&nbsp;</p>
+<p style="text-align: right;">By Maruthi and Arun </p>
+<!--<p style="text-align: right; color: rgb(196, 71, 58);">Under the Guidance of K. Srinivas&nbsp;</p>-->
 <h1 class="absolute-element" style="position: absolute; width: 968px; height: 282px; z-index: 4; left: -3px; top: 70px;">
 <img src="images/angularjs.jpg">
 <br>
