slight changes for tomorrows seminar

--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
 <p>
 <br>
 </p>
-<p style="text-align: right;">By Maruthi and Arun </p>
+<p style="text-align: right;">By P. Maruthi Sharma - 10261A0547 </p>
 <!--<p style="text-align: right; color: rgb(196, 71, 58);">Under the Guidance of K. Srinivas&nbsp;</p>-->
 <h1 class="absolute-element" style="position: absolute; width: 968px; height: 282px; z-index: 4; left: -3px; top: 70px;">
 <img src="images/angularjs.jpg">
 <br>
 </h1>
-
 </section>
 <section>
     <h2 style="color: rgb(196, 71, 58);">What is AngularJS</h2>
@@ -81,22 +80,6 @@
 
     </ul>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </section>
     <section>
         <h2 style="color: rgb(196, 71, 58);">MVC</h2>
@@ -131,8 +114,6 @@
 </li>
 </ul>
 </div>
-
-
 </section>
         <section>
             <h2 style="color: rgb(196, 71, 58);">MVC</h2>
@@ -141,11 +122,6 @@
             &nbsp; &nbsp; &nbsp;<img src="images/mvc.png" height="500">
             <br>
 </div>
-
-
-
-
-
 </section>
             <section>
                 <h2 style="color: rgb(196, 71, 58);">MVC</h2>
@@ -166,9 +142,6 @@
 <li>A <b>view </b>is told by the controller all the information it needs for generating an output representation to the user.&nbsp;</li>
 </ul>
 </div>
-
-
-
 </section>
                 <section>
                     <h2 style="color: rgb(196, 71, 58);">SPA</h2>
@@ -183,15 +156,6 @@
 </div>
 <img src="images/spa.png" height="350">
 </div>
-
-
-
-
-
-
-
-
-
 </section>
                     <section>
                         <h2 style="font-style: normal; font-variant: normal; color: rgb(196, 71, 58);">Advantages of SPA</h2>
@@ -220,7 +184,6 @@
 <li>Loads of libraries</li>
 </ul>
 </div>
-
 </section>
                         <section>
                             <br>
@@ -247,50 +210,33 @@ AngularJS lets you extend HTML vocabulary for your application using <b>Javascri
 <li>Its not a library, it is one core framework providing the functionality of many libraries</li>    
 </ul>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </section>
-                            <section>
-                                
-
+<section>
 <h2 style="font-style: normal; font-variant: normal; color: rgb(196, 71, 58);">Features of AngularJS</h2>
 <div>
 <ul>
 <li>Two way Data Binding</li>
+<li>Dependency Injection</li>
+<li>Templates</li>
+<li>MVC-like functionality (MVVM) </li>
 <li>Simple routing</li>
 <li>Highly compatible with pre-existing web libraries like jQuery</li>
-<li>MVC-like functionality</li>
 <li>
 <b>Directives </b>to extend the vocabulary of HTML</li>
 <li>
 <b>Filters </b>to customize the output</li>
-<li>Highly extensible</li>
-<li>Less code, especially for iterations</li>
 </ul>
-<div style="text-align: left;">
-                            <br>
-                        </div>
-</div>
-                    </section>
-                    <section>
-                        <h2 style="font-style: normal; font-variant: normal; color: rgb(196, 71, 58);">
-                            <br>
-                        </h2>
+</section>
+<section>
+<h2 style="font-style: normal; font-variant: normal; color: rgb(196, 71, 58);">Advantages</h2>
+<div>
+<ul>
+    <li>Active Developer/Support Community</li>
+    <li>Write Less. Do More. </li> 
+    <li>Highly extensible</li>
+</ul>
+</section>
+<section>
 <h2 style="font-style: normal; font-variant: normal; color: rgb(196, 71, 58);">Basic Angular Directives</h2>
 <div>
     <ul>
@@ -311,10 +257,8 @@ AngularJS lets you extend HTML vocabulary for your application using <b>Javascri
 <div>
     <br>
 </div>
-
-
 </section>
-                        <section>
+<section>
                             <section>&nbsp;<h2 class="absolute-element" style="position: absolute; width: 220px; height: 54px; z-index: 4; margin-left:-110px; left: 50%; top: 0px;">DEMO I<br>
 </h2>
 <i style="position: absolute; width: 400px; height: 54px; z-index: 4; top: 100px; left: 50%; margin-left: -200px;">A simple example<br>using<br> 
@@ -343,10 +287,6 @@ Directives and Data Binding
     &lt;/body&gt;
 &lt;/html&gt;</code>                            </pre>
 </div>
-
-
-
-
 </section>
                             <section>
                                 
@@ -369,11 +309,6 @@ Directives and Data Binding
 <div>
 
 </div>
-
-
-
-
-
 </section>
                         </section>
                         <section>
@@ -382,11 +317,6 @@ Directives and Data Binding
 <i style="position: absolute; width: 400px; height: 54px; z-index: 4; top: 100px; left: 50%; margin-left: -200px;">A simple example<br>using<br> 
 Iterations
 </i>
-
-
-
-
-
 </section>
                             <section>
 <h2>&nbsp;Listing without AngularJS<br>
